--- a/Resources/translations/ManuelTranslationBundle.es.xliff
+++ b/Resources/translations/ManuelTranslationBundle.es.xliff
@@ -83,6 +83,14 @@
                 <source>label.filter_status</source>
                 <target>Estado</target>
             </trans-unit>
+            <trans-unit id="label.with_conflicts">
+                <source>label.with_conflicts</source>
+                <target>Con Conflictos</target>
+            </trans-unit>
+            <trans-unit id="label.with_changes">
+                <source>label.with_changes</source>
+                <target>Con Cambios</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
