Siguen las simplificaciónes
Se realizan mejoras varias a nivel de simplificar el bundle

--- a/Resources/translations/ManuelTranslationBundle.en.xliff
+++ b/Resources/translations/ManuelTranslationBundle.en.xliff
@@ -187,14 +187,6 @@
                 <source>label.items</source>
                 <target>Items</target>
             </trans-unit>
-            <trans-unit id="label.generate_backup">
-                <source>label.generate_backup</source>
-                <target>Generate Backup</target>
-            </trans-unit>
-            <trans-unit id="label.restore_backup">
-                <source>label.restore_backup</source>
-                <target>Restore Backup</target>
-            </trans-unit>
             <trans-unit id="label.edit">
                 <source>label.edit</source>
                 <target>Edit</target>
@@ -202,6 +194,50 @@
             <trans-unit id="label.inactive">
                 <source>label.inactive</source>
                 <target>Inactive</target>
+            </trans-unit>
+            <trans-unit id="label.update_file">
+                <source>label.update_file</source>
+                <target>Update/Generate Translation File</target>
+            </trans-unit>
+            <trans-unit id="label.load_from_file">
+                <source>label.load_from_file</source>
+                <target>Synchronize Translations From File</target>
+            </trans-unit>
+            <trans-unit id="update_file_complete_flash">
+                <source>update_file_complete_flash</source>
+                <target>File Successfull Updated</target>
+            </trans-unit>
+            <trans-unit id="label.sync_results">
+                <source>label.sync_results</source>
+                <target>Synchronization Results</target>
+            </trans-unit>
+            <trans-unit id="label.new_items">
+                <source>label.new_items</source>
+                <target>New Items</target>
+            </trans-unit>
+            <trans-unit id="label.updated_items">
+                <source>label.updated_items</source>
+                <target>Updated Items</target>
+            </trans-unit>
+            <trans-unit id="label.conflicted_items">
+                <source>label.conflicted_items</source>
+                <target>Conflicted Items</target>
+            </trans-unit>
+            <trans-unit id="label.to_inactivate_items">
+                <source>label.to_inactivate_items</source>
+                <target>Inactivated Items</target>
+            </trans-unit>
+            <trans-unit id="label.database_values">
+                <source>label.database_values</source>
+                <target>Database Values</target>
+            </trans-unit>
+            <trans-unit id="label.file_values">
+                <source>label.file_values</source>
+                <target>File Values</target>
+            </trans-unit>
+            <trans-unit id="label.conflict_items">
+                <source>label.conflict_items</source>
+                <target>Conflict Items</target>
             </trans-unit>
         </body>
     </file>
