Creado hash para validar sincronizaciones
La idea es no permitir regenerar el archivo de traducciones hasta tanto
no se hayan sincronizado las mismas con la base de datos

--- a/Resources/translations/ManuelTranslationBundle.es.xliff
+++ b/Resources/translations/ManuelTranslationBundle.es.xliff
@@ -247,6 +247,10 @@
                 <source>label.conflict_items</source>
                 <target>Elementos con conflictos</target>
             </trans-unit>
+            <trans-unit id="local_hash_update_of_range">
+                <source>local_hash_update_of_range</source>
+                <target>Necesita syncronizar sus datos locales antes de actualizar o generar el archivo de traducciones</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
