--- a/Resources/translations/ManuelTranslationBundle.en.xliff
+++ b/Resources/translations/ManuelTranslationBundle.en.xliff
@@ -239,6 +239,10 @@
                 <source>label.conflict_items</source>
                 <target>Conflict Items</target>
             </trans-unit>
+            <trans-unit id="local_hash_update_of_range">
+                <source>local_hash_update_of_range</source>
+                <target>You need synchronize first, before generate or update the file backup</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
