--- a/Resources/translations/ManuelTranslationBundle.es.xliff
+++ b/Resources/translations/ManuelTranslationBundle.es.xliff
@@ -251,6 +251,10 @@
                 <source>local_hash_update_of_range</source>
                 <target>Necesita syncronizar sus datos locales antes de actualizar o generar el archivo de traducciones</target>
             </trans-unit>
+            <trans-unit id="label.download_generated_file">
+                <source>label.download_generated_file</source>
+                <target>Descargar el Archivo de Backup Generado</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
