--- a/Resources/translations/ManuelTranslationBundle.es.xliff
+++ b/Resources/translations/ManuelTranslationBundle.es.xliff
@@ -255,6 +255,10 @@
                 <source>label.download_generated_file</source>
                 <target>Descargar el Archivo de Backup Generado</target>
             </trans-unit>
+            <trans-unit id="label.generate_and_download_cache_file">
+                <source>label.generate_and_download_cache_file</source>
+                <target>Generar un Backup en Cache y Descargarlo</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
